# ADI-Stable-Diffusion

./: .gitignore  .gitmodules  CHANGELOG-v1.0.1.md  CHANGELOG.md  CMakeLists.txt  README.md  aarch64-toolchain.cmake  adi.1.0.1.nupkg  auto_build.sh  auto_build_ctl.sh  auto_clear.sh  auto_deploy.sh  ort_sd_py_imp.py
.github/workflows/: auto-deploy.yml  auto-publish.yml  cmake-multi-platform.yml  cmake-release-test.yml  test-cross.yml  test-native.yml
Formula/: adi.rb
apex/: project_cmake_colors.cmake  project_cmake_ortenv.cmake  project_cmake_static.cmake  project_cmake_utils.cmake
apex-toolchain/: android-aarch64-toolchain.cmake  android-toolchain.cmake  generic-toolchain.cmake  toolchain-android.cmake  toolchain-darwin.cmake  toolchain-linux.cmake  toolchain-windows.cmake
clitools/: CMakeLists.txt  main.cc  main.cpp
clitools/examples/: action_img2img_sd.sh  action_sd_img2img.sh  action_sd_txt2img.sh  action_sdxl_txt2img.sh  action_txt2img_sd.sh  action_txt2img_sd_turbo.sh  test_copy.sh
clitools/stb/: stb_image_resize2.h
engine/: README.md  auto_prepare_engine_env.sh
include/: adi.h  ort_sd.h
outlet/: adi.cc  ort_sd.cc
sd/: README.md  auto_prepare_converter_env.sh  auto_prepare_sd_models.sh
sd/sd-base-model/: auto_prepare_sd_models.sh  auto_prepare_sd_turbo.sh
source/: ort_sd_context.cc
source/amon/: basic_logger.h  cens_statistics_base.h  cens_target_fps.h  exception_base.h  exception_class.h  exception_register.h  exception_type.h  exceptions_entry.h
source/apex/: onnxsd_base_defs.h  onnxsd_basic_config.h
source/base/: onnxsd_base_defs.h  onnxsd_basic_core_config.cc  onnxsd_basic_refs.h  onnxsd_basic_register.cc  onnxsd_basic_tools.cc  onnxsd_defs.h  onnxsd_executor.cc  onnxsd_foundation.cc
source/promptifier/: promptifier_parser.cc
source/scheduler/: scheduler_base.cc  scheduler_discrete_ddim.cc  scheduler_discrete_ddpm.cc  scheduler_discrete_eular_a.cc  scheduler_discrete_euler.cc  scheduler_discrete_euler_a.cc  scheduler_discrete_heun.cc  scheduler_discrete_lcm.cc  scheduler_discrete_lms.cc  scheduler_discrete_unipc.cc  scheduler_eular_a_discrete.cc  scheduler_lcm_karras.cc  scheduler_register.cc
source/tokenizer/: tokenizer_base.cc  tokenizer_bpe.cc  tokenizer_encode_bpe.cc  tokenizer_encode_wp.cc  tokenizer_register.cc
source/units/: model_base.cc  model_clip.cc  model_register.cc  model_tokenizer.cc  model_unet.cc  model_vae.cc  model_wrapper.cc  unet.cc
